--- a/proposal/jensen-pres.tex
+++ b/proposal/jensen-pres.tex
@@ -1,4 +1,4 @@
-% Created 2023-03-06 Mon 15:36
+% Created 2023-03-06 Mon 15:48
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation, aspectratio=1610]{beamer}
 \usepackage[utf8]{inputenc}
@@ -15,6 +15,8 @@
 \usetheme[progressbar=foot]{metropolis}
 \usepackage{caption}
 \captionsetup[figure]{labelformat=empty}
+\DeclareMathOperator*{\argmax}{\arg\!max}
+\DeclareMathOperator*{\argmin}{\arg\!min}
 \AtBeginSubsection{\begin{frame}\tableofcontents[currentsection,currentsubsection]\end{frame}}
 \usetheme{metropolis}
 \usecolortheme{}
@@ -43,13 +45,13 @@
 
 
 \section{Introduction}
-\label{sec:org90aff05}
-\begin{frame}[label={sec:org8ac3493}]{Acknowledgments}
+\label{sec:orgc4b7f7e}
+\begin{frame}[label={sec:org8447ea2}]{Acknowledgments}
 I would like to thank the McJunkin Family Charitable Foundation for their generous grant that supports this work.
 \end{frame}
 \section{Motivation}
-\label{sec:org174cea0}
-\begin{frame}[label={sec:orgf1a3c16}]{The Problem}
+\label{sec:org6e11516}
+\begin{frame}[label={sec:orgb0e2696}]{The Problem}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -71,7 +73,7 @@ I would like to thank the McJunkin Family Charitable Foundation for their genero
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orge11abe5}]{Our Proposition}
+\begin{frame}[label={sec:org3e2863e}]{Our Proposition}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practical}} and \alert{\alert{inexpensive}} technology that allows them to \alert{\alert{measure}} a patient's knee kinematics during \alert{\alert{activities of daily living}}.
@@ -83,7 +85,7 @@ Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practica
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org81ac375}]{Constraints}
+\begin{frame}[label={sec:org541e026}]{Constraints}
 \begin{columns}
 \begin{column}{0.45\columnwidth}
 \begin{itemize}
@@ -100,66 +102,13 @@ Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practica
 \end{columns}
 \end{frame}
 \section{Background}
-\label{sec:orge068d6d}
-\begin{frame}[label={sec:orge12b789}]{Projective Geometry}
-\begin{columns}
-\begin{column}{0.5\columnwidth}
-\begin{equation*}
-  \begin{pmatrix}
-    x_{s} \\ y_{s} \\ z_{s} \\ 1
-  \end{pmatrix}_{i} = T^{cam}_{scene} \mathbf{\tilde{p}^{obj}_{i}}
-\end{equation*}
-
-\begin{equation*}
-  \begin{pmatrix}
-    \tilde{x}_{img} \\ \tilde{y}_{img} \\ \tilde{z}
-  \end{pmatrix} =
-  \begin{pmatrix}
-    f& 0 & 0 \\ 0 & f & 0 \\ 0 & 0 & 1
-  \end{pmatrix} \vec{x}_{s}
-\end{equation*}
-
-Where
-\begin{equation*}
-  \begin{aligned}
-    x_{img} &= \frac{\tilde{x_{img}}}{\tilde{z}} = \frac{f}{z_{s}}x_{s} \\
-    y_{img} &= \frac{\tilde{y_{img}}}{\tilde{z}} = \frac{f}{z_{s}}y_{s}
-  \end{aligned}
-\end{equation*}
-
-{\tiny Note: We are still in the camera's reference frame}
-\end{column}
-
-\begin{column}{0.6\columnwidth}
+\label{sec:org20849fd}
+\begin{frame}[label={sec:org9832a6b}]{Projective Geometry}
 \begin{center}
-\includegraphics[width=.9\linewidth]{/home/andrew/repo/lit-review/figures/raster/perspective-projection.png}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-\begin{frame}[label={sec:org5cc1d08}]{Projective Geometry}
-\begin{center}
-\includegraphics[width=.9\linewidth]{/home/andrew/repo/lit-review/figures/raster/perspective-projection.png}
+\includegraphics[width=0.8\textwidth]{/home/andrew/repo/lit-review/figures/raster/perspective-projection.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org392278b}]{Pixel Coordinates}
-Convert camera coordinates into image coordinates.
-\begin{equation*}
-  \begin{aligned}
-    p_{x} = k_{x}x_{img} + c_{x} \\
-    p_{y} = k_{y}y_{img} + c_{y}
-  \end{aligned}
-\end{equation*}
-Where
-\begin{equation*}
-  \begin{aligned}
-    k &\equiv \text{ Pixel Spacing }\\
-    c &\equiv \text{ Image Focal Point }
-  \end{aligned}
-\end{equation*}
-\end{frame}
-
-\begin{frame}[label={sec:org1fb4f11}]{Model-Image Registration}
+\begin{frame}[label={sec:org0e358f3}]{Model-Image Registration}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 If we know the projective parameters of the fluoroscopy machine, can we tinker with \(T^{cam}_{implant}\) so that our virtual projection matches the fluoroscopic image?
@@ -174,8 +123,8 @@ If we know the projective parameters of the fluoroscopy machine, can we tinker w
 \end{columns}
 \end{frame}
 \section{Historical Methods}
-\label{sec:org733ecda}
-\begin{frame}[label={sec:org0db7101}]{Overview}
+\label{sec:org0e706ed}
+\begin{frame}[label={sec:org932960c}]{Overview}
 Many different approaches have attempted to solve the model-image registration problem.
 \begin{itemize}
 \item Pre-computed projections
@@ -185,7 +134,7 @@ Many different approaches have attempted to solve the model-image registration p
 \item Model-based Roentgen Stereophotogrammetry
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org9ef2007}]{Pre-Computed Projections}
+\begin{frame}[label={sec:orgb7c0f47}]{Pre-Computed Projections}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -209,7 +158,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgc52ff3d}]{Limitations of Pre-Computed Projections}
+\begin{frame}[label={sec:org35be97a}]{Limitations of Pre-Computed Projections}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -232,7 +181,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org0b90d2e}]{Motion Capture (MoCap)}
+\begin{frame}[label={sec:org471843e}]{Motion Capture (MoCap)}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -257,7 +206,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgb06ec3d}]{Limitations of Motion Capture}
+\begin{frame}[label={sec:orgd0bfa82}]{Limitations of Motion Capture}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 Skin Mounted
@@ -287,7 +236,7 @@ Bone Pins
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgd2b8c11}]{Biplane Imaging}
+\begin{frame}[label={sec:org9283a9b}]{Biplane Imaging}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -312,7 +261,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org8ef4eb6}]{Limitations of Biplane Imaging}
+\begin{frame}[label={sec:org7d99355}]{Limitations of Biplane Imaging}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -335,7 +284,7 @@ Bone Pins
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgcc871c4}]{Iterative Projections}
+\begin{frame}[label={sec:org9804825}]{Iterative Projections}
 \begin{columns}
 \begin{column}{0.54\columnwidth}
 \begin{itemize}
@@ -360,7 +309,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgaa2fb86}]{Limitations of (historic) Iterative Projection Methods}
+\begin{frame}[label={sec:org6f04a08}]{Limitations of (historic) Iterative Projection Methods}
 \begin{columns}
 \begin{column}{0.54\columnwidth}
 \begin{itemize}
@@ -388,7 +337,7 @@ Bone Pins
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgdc6ef9d}]{Roentgen Stereophotogrammetry (RSA)}
+\begin{frame}[label={sec:org3d35cbb}]{Roentgen Stereophotogrammetry (RSA)}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -407,7 +356,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org98627db}]{Limitations of RSA}
+\begin{frame}[label={sec:org09ed61d}]{Limitations of RSA}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -427,8 +376,8 @@ Bone Pins
 \end{frame}
 
 \section{Aims}
-\label{sec:org26cc95d}
-\begin{frame}[label={sec:org18db167}]{Aims}
+\label{sec:org1c00efe}
+\begin{frame}[label={sec:org2871e0b}]{Aims}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{block}{Aims 1/2}
@@ -449,11 +398,11 @@ Joint Track Auto Toolkit
 \end{frame}
 
 \subsection{Aim 1 - Joint Track Machine Learning}
-\label{sec:org98f7c55}
-\begin{frame}[label={sec:org5086add}]{Goal}
+\label{sec:org54ace3f}
+\begin{frame}[label={sec:orgd7265db}]{Goal}
 Demonstrate the feasibility of a fully autonomous, model-image registration pipeline.
 \end{frame}
-\begin{frame}[label={sec:org9d581c6}]{Method}
+\begin{frame}[label={sec:org1484938}]{Method}
 \begin{itemize}
 \item Three-tiered approach
 \begin{itemize}
@@ -466,7 +415,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=\textwidth]{/home/andrew/repo/lit-review/figures/raster/pipeline-nocite.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org7565bac}]{Autonomous Implant Detection Using Convolutional Neural Networks}
+\begin{frame}[label={sec:org055886e}]{Autonomous Implant Detection Using Convolutional Neural Networks}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -484,7 +433,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org3ac1792}]{Neural Network Data}
+\begin{frame}[label={sec:orgd6312cf}]{Neural Network Data}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -508,7 +457,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org83f1c9c}]{Neural Network Robustness}
+\begin{frame}[label={sec:org6a1a7e8}]{Neural Network Robustness}
 \begin{itemize}
 \item Additional augmentations introduced during training \autocite{buslaevAlbumentationsFastFlexible2020}.
 \end{itemize}
@@ -516,7 +465,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=.9\linewidth]{/home/andrew/repo/lit-review/figures/raster/augmentations.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org2655113}]{Normalized Fourier Descriptor Shape Libraries}
+\begin{frame}[label={sec:org2f21687}]{Normalized Fourier Descriptor Shape Libraries}
 \begin{columns}
 \begin{column}{0.37\columnwidth}
 \begin{itemize}
@@ -535,7 +484,9 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org1d27ac7}]{Pose Refinement Using Global Optimization}
+\begin{frame}[label={sec:org7849896}]{Pose Refinement Using Global Optimization}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
 \begin{itemize}
 \item Two main features
 \begin{itemize}
@@ -543,8 +494,16 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \item Optimization routine
 \end{itemize}
 \end{itemize}
+\end{column}
+\begin{column}{0.5\columnwidth}
+\begin{equation*}
+    \argmin_{x}\{f(x) : x \in \Omega\}
+\end{equation*}
+\end{column}
+\end{columns}
 \end{frame}
-\begin{frame}[label={sec:org067fba0}]{Contour-based Objective Function}
+
+\begin{frame}[label={sec:orgd046b97}]{Contour-based Objective Function}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -570,7 +529,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org9bd96c1}]{Improving Robustness}
+\begin{frame}[label={sec:org590b43c}]{Improving Robustness}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -585,7 +544,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org555de2b}]{Optimization Routine}
+\begin{frame}[label={sec:org891d600}]{Optimization Routine}
 \begin{itemize}
 \item No analytic form of the objective function exists, it \alert{\alert{must}} be sampled at points of interest.
 \begin{itemize}
@@ -594,7 +553,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgde4cd28}]{Lipschitzian Optimization}
+\begin{frame}[label={sec:orga4c3d6b}]{Lipschitzian Optimization}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -618,7 +577,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgbf477cf}]{Lipschitzian Optimization without the Lipschitz Constant}
+\begin{frame}[label={sec:orgd8b4f45}]{Lipschitzian Optimization without the Lipschitz Constant}
 \begin{center}
 \includegraphics[width=2.5in]{/home/andrew/repo/lit-review/figures/raster/jones-direct-title.png}
 \end{center}
@@ -633,7 +592,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=2.5in]{/home/andrew/repo/lit-review/figures/raster/direct-1D.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org122d685}]{Determining Potentially Optimal Regions}
+\begin{frame}[label={sec:orge77dc4d}]{Determining Potentially Optimal Regions}
 \begin{itemize}
 \item Convex hull of region size vs. center value
 \end{itemize}
@@ -641,7 +600,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=0.6\textwidth]{/home/andrew/repo/lit-review/figures/raster/direct-convex-hull.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org76d75af}]{DiRECT for Joint Track Machine Learning}
+\begin{frame}[label={sec:org73f7e23}]{DiRECT for Joint Track Machine Learning}
 \begin{itemize}
 \item Search region is along all 6 degrees of freedom.
 \begin{itemize}
@@ -662,13 +621,13 @@ Stage & Budget [Iterations] & Search Range [mm,deg] & Dilation (pixels)\\\empty
 \end{tabular}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org6859577}]{Testing Performance}
+\begin{frame}[label={sec:org33fe861}]{Testing Performance}
 Now that we have our refined poses, how well does out system perform?
 \begin{center}
 \includegraphics[width=\textwidth]{/home/andrew/repo/lit-review/figures/raster/pipeline-nocite.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org5b6cffa}]{Validation}
+\begin{frame}[label={sec:orgc8d47fe}]{Validation}
 \begin{itemize}
 \item Independent research group using Model-Based RSA.
 \item Determine the level of concordance between the two measurement systems
@@ -681,15 +640,15 @@ Now that we have our refined poses, how well does out system perform?
 \includegraphics[width=0.77\textwidth]{/home/andrew/repo/lit-review/figures/raster/broberg-bland-altmann.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org45abba8}]{Awards}
+\begin{frame}[label={sec:org4025ee0}]{Awards}
 The work presented in this aim won the HAP Paul Award for Best Paper from the International Society for Technology in Arthroplasty's 2022 Annual Meeting.
 \begin{center}
 \includegraphics[width=0.7\textwidth]{/home/andrew/repo/lit-review/figures/raster/ista-map-paul-talk.jpg}
 \end{center}
 \end{frame}
 \subsection{Aim 2 - Overcoming Single-Plane Limitations}
-\label{sec:org117c56b}
-\begin{frame}[label={sec:org6bfc9e2}]{Goal}
+\label{sec:orgec65c00}
+\begin{frame}[label={sec:org505e36d}]{Goal}
 \begin{itemize}
 \item The goal of this aim is to validate and test methods that can overcome single-plane limitations for model-image registration.
 \begin{itemize}
@@ -699,7 +658,7 @@ The work presented in this aim won the HAP Paul Award for Best Paper from the In
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd9c2a30}]{Translation}
+\begin{frame}[label={sec:org7d3d336}]{Translation}
 \begin{itemize}
 \item Depth perception is lost when using a single camera.
 \item Utilize a virtual ``spring'' to constrain relative OOP translation between implant components.
@@ -715,7 +674,7 @@ Where
 \end{equation*}
 \end{frame}
 
-\begin{frame}[label={sec:org0654ebf}]{Symmetry Traps}
+\begin{frame}[label={sec:org4ffecd9}]{Symmetry Traps}
 With a symmetric tibial implant, the contour is not always a perfect heuristic for true pose. Human operators typically utilize relative varus-valgus to determine correct pose.
 
 Found ``ambiguous zone'' within \(3^{\circ}\) of pure lateral pose with high propensity for symmetry traps \autocite{jensenJointTrackMachine2022}.
@@ -724,7 +683,7 @@ Found ``ambiguous zone'' within \(3^{\circ}\) of pure lateral pose with high pro
 \includegraphics[width=0.7\textwidth]{/home/andrew/repo/lit-review/figs/jtml-paper/fig6-symtrap.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org6e467a8}]{Solving the Symmetric Pose}
+\begin{frame}[label={sec:orgc9766e1}]{Solving the Symmetric Pose}
 \begin{enumerate}
 \item Create a vector from the camera origin to the implant origin (viewing ray).
 \item Determine the axis (\(\vec{m}\)) and angle (\(\theta\)) of rotation between the viewing ray and the symmetric (mediolateral) axis.
@@ -733,7 +692,7 @@ Found ``ambiguous zone'' within \(3^{\circ}\) of pure lateral pose with high pro
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[label={sec:org0d070e7}]{Five Approaches}
+\begin{frame}[label={sec:orgb13fc63}]{Five Approaches}
 \begin{itemize}
 \item Virtual ligaments
 \item Binary selection between two poses
@@ -743,7 +702,7 @@ Found ``ambiguous zone'' within \(3^{\circ}\) of pure lateral pose with high pro
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgbebd5ff}]{Virtual Ligaments}
+\begin{frame}[label={sec:orgedc4a53}]{Virtual Ligaments}
 \begin{equation*}
   J = \alpha L_{1}(I,P) + \beta ML(Fem,Tib) + \gamma VV(Fem,Tib)
 \end{equation*}
@@ -755,7 +714,7 @@ Where
 \end{equation*}
 \end{frame}
 
-\begin{frame}[label={sec:orged00c5c}]{Binary Selection}
+\begin{frame}[label={sec:orgfcc0a3d}]{Binary Selection}
 \begin{enumerate}
 \item Determine optimized pose using \(L_1 + ML\)
 \item Calculate symmetric pose.
@@ -764,7 +723,7 @@ Where
 
 This method can simplify the selection criteria (one fewer hyperparameter).
 \end{frame}
-\begin{frame}[label={sec:orgf559ce2}]{Bland-Altmann Calibration Constant}
+\begin{frame}[label={sec:orgcd294a9}]{Bland-Altmann Calibration Constant}
 \begin{itemize}
 \item Utilizing Bland-Altmann plots from gold-standard kinematics, create a ``correction constant'' for relative varus/valgus (ad/abduction) angles.
 \item Notice linear trend in BA plots.
@@ -774,7 +733,7 @@ This method can simplify the selection criteria (one fewer hyperparameter).
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgeb4908c}]{Fully Connected Network}
+\begin{frame}[label={sec:orgedd68e8}]{Fully Connected Network}
 \begin{itemize}
 \item Encode symmetric pose calculation into FCN.
 \item Feed femoral and tibial \alert{\alert{pose}} into network.
@@ -793,7 +752,7 @@ This method can simplify the selection criteria (one fewer hyperparameter).
 \end{frame}
 
 
-\begin{frame}[label={sec:org8d57691}]{Timeline}
+\begin{frame}[label={sec:org8bb2c5a}]{Timeline}
 \begin{itemize}
 \item All kinematics data has already been collected.
 \item Completed Methods
@@ -812,8 +771,8 @@ Journal paper will be ready for submission by June.
 \end{frame}
 
 \subsection{Aim 3 - Pilot Human Study}
-\label{sec:org13353bf}
-\begin{frame}[label={sec:orgb6552c1}]{Goal}
+\label{sec:org71a093a}
+\begin{frame}[label={sec:org93a7692}]{Goal}
 No kinematics studies have exclusively utilized Joint Track Machine Learning; let's be the first.
 
 What are we measuring?
@@ -828,7 +787,7 @@ What are we measuring?
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org79c2ce4}]{Methods}
+\begin{frame}[label={sec:org78dc200}]{Methods}
 \begin{itemize}
 \item 20-30 patients
 \item \textasciitilde{}Dozen activities with fluoroscopic machine
@@ -843,11 +802,11 @@ IRB approval \textasciitilde{}4 months out.
 
 
 \subsection{Aim 4 - Standardized Kinematics Exam}
-\label{sec:orgbc3fd0e}
-\begin{frame}[label={sec:orgc02c756}]{Goal}
+\label{sec:orge3273a1}
+\begin{frame}[label={sec:org59b0aa3}]{Goal}
 Establish a ``standard kinematics exam'' by determining the most statistically and anatomically relevent fluoroscopic image(s) to capture during a clinical visit.
 \end{frame}
-\begin{frame}[label={sec:org22f1df2}]{Motivation}
+\begin{frame}[label={sec:orgfdfc2ae}]{Motivation}
 \begin{itemize}
 \item We have standardized pain/outcome scores
 \begin{itemize}
@@ -863,7 +822,7 @@ Establish a ``standard kinematics exam'' by determining the most statistically a
 Autonomous kinematics measurements allow researchers to spend more time asking and answering questions rather than fiddling with annoying software.
 \end{frame}
 
-\begin{frame}[label={sec:org0cd8f7f}]{Method}
+\begin{frame}[label={sec:orga478126}]{Method}
 \begin{itemize}
 \item Use images and kinematics from Aim 3.
 \item Utilize statistical methods to determine covariance and causal/corollary relationships.
@@ -874,13 +833,13 @@ Autonomous kinematics measurements allow researchers to spend more time asking a
 \end{itemize}
 \end{frame}
 \subsection{Aim 5 - Joint Track Auto Toolkit}
-\label{sec:org03634c1}
-\begin{frame}[label={sec:orgba89acd}]{Goal}
+\label{sec:org56ba0ca}
+\begin{frame}[label={sec:org2d67d53}]{Goal}
 Create a freely available Python library that allows other researchers to utilize JTML's model-image registration framework. Extra emphasis will be placed on extensibility to allow other researchers to compose their own registration pipelines.
 \end{frame}
 \section{References}
-\label{sec:org2741416}
-\begin{frame}[label={sec:org3a28dc4},fragile, allowframebreaks, label=]{References}
+\label{sec:orgfe0cae4}
+\begin{frame}[label={sec:orgf163a9d},fragile, allowframebreaks, label=]{References}
 \AtNextBibliography{\tiny}
 \printbibliography
 \end{frame}
